# ComfyUI-ArchAi3d-Qwen

./: .gitignore  .tracking  AUTO_FACING_FEATURE.md  AUTO_FACING_TEST_RESULTS.md  CAMERA_PROMPTING_GUIDE.md  CHANGELOG.md  CINEMATOGRAPHY_PROMPT_BUILDER_COMPLETE.md  CINEMATOGRAPHY_PROMPT_BUILDER_TESTS.md  CUSTOM_DETAILS_TOOLTIP_ENHANCEMENT.md  DRAM_CACHE_GUIDE.md  HORIZONTAL_ANGLE_PERSPECTIVE_CORRECTION.md  PROMPT_FORMAT_FIXES.md  PUBLISHING_SETUP.md  README.md  SESSION_UPDATES_v2.4.1.md  STRUCTURE.md  SYSTEM_PROMPT_UPDATE.md  __init__.py  archai3d_qwen_encoder.py  archai3d_qwen_system_prompt.py  blender_connection.py  blender_panorama_camera.py  config.json  install.py  license_file.txt  pyproject.toml  requirements.txt  start_qwenvl_server.sh  test_auto_facing.py  test_object_focus.txt
.claude/: settings.local.json
.github/workflows/: publish.yml
config/: materials.yaml
docs/: CAMERA_CONTROL_GUIDE.md  CAMERA_SYSTEM_PROMPTS.md  CINEMATOGRAPHY_PRESETS_GUIDE.md  COMFYUI_NODE_CREATION_GUIDE.md  GRAG_ENCODER_GUIDE.md  GRAG_MODIFIER_GUIDE.md  GRAG_PRESETS_GUIDE.md  LLAMA_CPP_SETUP.md  MASK_TO_POSITION_GUIDE_NODE.md  NEW_NODES_README.md  NUNCHAKU_INSTALLATION_GUIDE.md  OBJECT_ROTATION_V2_GUIDE.md  PERSON_PERSPECTIVE_GUIDE.md  POSITION_GUIDE_PROMPT_BUILDER_NODE.md  PROMPT_REFERENCE.md  QWEN_ENCODER_V3_PARAMETERS_GUIDE.md  QWEN_PROMPT_GUIDE.md  QWEN_PROMPT_WRITING_GUIDE.md  RTX5090_BLACKWELL_GUIDE.md  TARGET_DESCRIPTION_PATTERN.md  cinematography_reference_v7.md
nodes/camera/: __init__.py  archai3d_qwen_camera_view_selector.py  archai3d_qwen_environment_navigator.py  archai3d_qwen_exterior_focus.py  archai3d_qwen_exterior_navigation.py  archai3d_qwen_exterior_view_control.py  archai3d_qwen_interior_focus.py  archai3d_qwen_interior_navigation.py  archai3d_qwen_interior_view_control.py  archai3d_qwen_object_position_control.py  archai3d_qwen_object_rotation_control.py  archai3d_qwen_object_rotation_v2.py  archai3d_qwen_object_view_control.py  archai3d_qwen_person_cinematographer.py  archai3d_qwen_person_perspective.py  archai3d_qwen_person_perspective_control.py  archai3d_qwen_person_position_control.py  archai3d_qwen_person_rotation_control.py  archai3d_qwen_person_view_control.py  archai3d_qwen_scene_photographer.py  cinematography_prompt_builder.py  dx8152_camera_lora.py  object_focus_camera.py  object_focus_camera_v2.py  object_focus_camera_v3.py  object_focus_camera_v4.py  object_focus_camera_v5.py  object_focus_camera_v6.py  object_focus_camera_v7.py  simple_camera_control.py
nodes/core/: __init__.py
nodes/core/encoders/: __init__.py  archai3d_qwen_encoder_simple.py  archai3d_qwen_encoder_simple_v2.py  archai3d_qwen_encoder_v2.py  archai3d_qwen_encoder_v3.py  archai3d_qwen_grag_encoder.py
nodes/core/prompts/: __init__.py  archai3d_clean_room_prompt.py  archai3d_qwen_system_prompt.py
nodes/core/utils/: __init__.py  archai3d_grag_modifier.py  archai3d_qwen_image_scale.py  archai3d_qwen_image_scale_v2.py  archai3d_qwen_image_stitch.py  grag_attention.py
nodes/editing/: __init__.py  archai3d_qwen_colorization.py  archai3d_qwen_material_changer.py  archai3d_qwen_style_transfer.py  archai3d_qwen_watermark_removal.py
nodes/inputs/: __init__.py  archai3d_boolean_input.py  archai3d_civitai_download.py  archai3d_conditioning_balance.py  archai3d_float_input.py  archai3d_gdrive_download.py  archai3d_gemini.py  archai3d_gemini_model.py  archai3d_hf_download.py  archai3d_int_input.py  archai3d_llama_cpp_installer.py  archai3d_load_image_url.py  archai3d_qwenvl_gguf.py  archai3d_save_image.py  archai3d_string_input.py  archai3d_triggered_loaders.py  gemini_cache.json
nodes/outputs/: __init__.py  save_splat_scene.py
nodes/sampling/: archai3d_grag_sampler.py
nodes/utils/: __init__.py  archai3d_any_index_switch.py  archai3d_average_color.py  archai3d_batch_split_merge.py  archai3d_batch_text_encode.py  archai3d_circle_mask.py  archai3d_color_correction_advanced.py  archai3d_color_correction_bt709.py  archai3d_diffsynth_controlnet.py  archai3d_extract_region_text.py  archai3d_float_list.py  archai3d_highpass_blend.py  archai3d_info.py  archai3d_mask_crop_rotate.py  archai3d_mask_to_position_guide.py  archai3d_mask_uncrop.py  archai3d_memory_cleanup.py  archai3d_metric3d_normal.py  archai3d_multi_prompt.py  archai3d_offload_clip.py  archai3d_offload_model.py  archai3d_panorama_conversion.py  archai3d_panorama_offset.py  archai3d_position_guide_prompt_builder.py  archai3d_sam3_segment.py  archai3d_seed_list.py  archai3d_segs_mask_blur.py  archai3d_segs_mask_irregularity.py  archai3d_segs_to_bundle.py  archai3d_simple_position_prompt.py  archai3d_smart_tile_calculator.py  archai3d_smart_tile_calculator_v3.py  archai3d_smart_tile_calculator_v4.py  archai3d_smart_tile_calculator_v5.py  archai3d_smart_tile_conditioning.py  archai3d_smart_tile_detailer.py  archai3d_smart_tile_merger.py  archai3d_smart_tile_prompter.py  archai3d_smart_tile_prompter_turbo.py  archai3d_smart_tile_sampler.py  (+17 more)
nodes/utils/cache/metric3d/: cache_index.json
nodes/utils/cache/sam3/: cache_index.json
nodes/utils/metric3d_lib/: __init__.py
nodes/utils/smart_usdu/: __init__.py  processing.py  ultimate_upscale.py  upscaler.py  usdu_patch.py  utils.py
nodes/utils/usdu_edge_repair/: README.md  __init__.py  constants.py  controlnet.py  diffdiff.py  inputs.py  node.py  preview.py  processing.py  shared.py  tile_geometry.py  ultimate_upscale.py  upscaler.py  usdu_patch.py  utils.py  validation.py
nodes/utils/usdu_simple/: __init__.py  blend_mask.py  tile_compositor.py  tile_cropper.py  tile_sampler.py  utils.py
workflows/: DRAM_qwen_image_edit_2511.json  simple_usdu_example.json  test_basic.json
